# vulkrayphy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  create-build-windows.sh  create_build_linux.sh  create_build_windows.sh  run-windows.sh  run_linux.sh  run_windows.sh
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-windows/lib/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-windows/lib/glfw-3.4/src/: Makefile  cmake_install.cmake  glfw3.pc
include/: camera.hpp  controls.hpp  load_model.hpp
lib/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.4/src/: Makefile  cmake_install.cmake
src/: GameTime  Makefile  VulkanTest  controls.cpp  main.cpp
src/models/pool_table/: POOL_TABLE.mtl
src/shaders/: frag.spv  pbr.frag  shader.frag  shader.vert  vert.spv
test/: Makefile  VulkanTest  main.cpp
